[build-system]
requires = [
    "setuptools<64",
    "wheel",
    "requests>=2.4.0",
    "cloudpickle>=1.5.0"
]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
extend-exclude = '''
^/xoscar_ray/(_version.py)
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*"]
skip = "pp* *musllinux* *i686 cp36* cp310-win32"
manylinux-x86_64-image = "manylinux2014"
